--- a/info.html
+++ b/info.html
@@ -4,8 +4,12 @@
 <head>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="css/style.css">
-  <!-- custom font -->
+
+  <!--  scripts -->
   <script src="scripts/script.js"></script>
+  <script src="scripts/contact.js"></script>
+
+  <!-- custom font -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap" rel="stylesheet">
   <title>INFO</title>
 </head>
@@ -28,7 +32,8 @@
     <a class="#main" href="index.html">HOME</a>
     <a href="#shop">SHOP</a>
     <a href="info.html">INFO</a>
-    <a href="#contact">CONTACT</a>
+    <a href="contact.html">CONTACT</a>
+    <a href="reflect.html">REFLECT</a>
     <a style="color: green;" href="#cart">CART</a>
   </nav>
 
@@ -41,7 +46,15 @@
   </div>
 
 
-  <div class=" footer-container">
+
+  <div class="footer-container">
+    <h2 style="padding-bottom: 20px;" class="cta-text">SUBSCRIBE TO OUR NEWSLETTER</h2>
+    <form action="https://formspree.io/meqrnngl" method="POST">
+      <label class="email-label">
+        <input placeholder="someone@email.com" type="email" name="_replyto" required>
+      </label>
+      <input type="submit" value="submit">
+    </form>
     <h2>© A11E 2020</h2>
   </div>
 
