--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
 <head>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="css/style.css">
-  <!-- custom font -->
+
+
+  <!-- External CSS Libraries - Bootstrap Scripts (For stylistic purposes) -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+
+  <!--  scripts -->
   <script src="scripts/script.js"></script>
+  <script src="scripts/contact.js"></script>
+
+  <!-- custom font -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap" rel="stylesheet">
   <title>HOME</title>
 </head>
@@ -30,7 +46,8 @@
     <a class="#main" href="index.html">HOME</a>
     <a href="#shop">SHOP</a>
     <a href="info.html">INFO</a>
-    <a href="#contact">CONTACT</a>
+    <a href="contact.html">CONTACT</a>
+    <a href="reflect.html">REFLECT</a>
     <a style="color: green;" href="#cart">CART</a>
   </nav>
 
@@ -231,7 +248,16 @@
 
   </div>
 
+
+
   <div class="footer-container">
+    <h2 style="padding-bottom: 20px;" class="cta-text">SUBSCRIBE TO OUR NEWSLETTER</h2>
+    <form action="https://formspree.io/meqrnngl" method="POST">
+      <label class="email-label">
+        <input placeholder="someone@email.com" type="email" name="_replyto" required>
+      </label>
+      <input type="submit" value="submit">
+    </form>
     <h2>© A11E 2020</h2>
   </div>
 
